fix: ui changes to reduce day font and spacing

--- a/3rd-air-champion-frontend/src/styles/calendarStyle.css
+++ b/3rd-air-champion-frontend/src/styles/calendarStyle.css
@@ -10,6 +10,10 @@
   @apply hover:bg-slate-500 h-[100px] sm:h-[76px] border border-gray-300 grid grid-rows-4 mb-1;
 }
 
+.react-calendar__custom_tile > abbr {
+  font-size: 0.75rem;
+}
+
 .react-calendar__custom_tile_today {
   @apply border-2 border-solid border-yellow-500;
 }
